fix: Do not `wrap-anywhere` if code element belongs to a table (#2286)
* fix: Apply whitespace-nowrap to code elements that belong to a table


* feat: Add new documentation page example to showcase wrapping

---------

--- a/packages/zudoku/src/app/main.css
+++ b/packages/zudoku/src/app/main.css
@@ -55,6 +55,10 @@
   a {
     @apply font-normal underline-offset-4 hover:text-primary;
   }
+  td code,
+  th code {
+    @apply whitespace-nowrap;
+  }
   blockquote {
     @apply not-italic text-neutral-500/75 dark:text-neutral-400;
     /* Disable adding quote marks to block-quotes: https://github.com/tailwindlabs/tailwindcss-typography/issues/66 */
